# trader_town_backend

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: __init__.py  config.py  main.py
app/agents/: README.md  __init__.py  base_agent.py  models.py  technical_analyst_agent.py  test_agent.py  test_minimal.py  test_traders.py  value_investor_agent.py
app/api/: __init__.py
app/api/routes/: __init__.py  service.py
app/db/: connection.py  crud.py  doc.sql  models.py
docs/: API_COINS.md
tests/: test_api_routes.py
web/: package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: AIAgent.jsx  AddAgentModal.jsx  ChatBubble.jsx  KLineChart.jsx  ProfitBoard.jsx  StatsPanel.jsx  StatusBar.jsx  TradingBubble.jsx  TradingHall.jsx
web/src/services/: api.js
